--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "SamuraiTitan",
     "version_number": "1.1.0",
     "website_url": "https://github.com/Legandy/SamuraiTitan",
-    "description": "Vanguard Titan equipped with a broadsword and sword core. Like trailer BT.",
+    "description": "Vanguard Titan equipped with a broadsword and sword core. Like BT in the wallpaper.",
     "dependencies": 
     [
         "northstar-Northstar-1.30.2",
